--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
       <span translate>Hello world !</span>
     </h1>
-    <app-loader [isLoading]="true"></app-loader>
-    <q [hidden]="isLoading">{{ quote }}</q>
+    <app-loader [isLoading]="this.isLoading"></app-loader>
+    <q [hidden]="this.isLoading">{{ quote }}</q>
   </div>
 </div>
