--- a/src/app/landing/landing/landing.component.html
+++ b/src/app/landing/landing/landing.component.html
@@ -64,7 +64,7 @@
       <a *ngFor="let item of this.footerLinks" href="#">{{ item.text }}</a>
     </div>
     <div class="landing-page__footer-info">
-      <p>Info</p>
+      <p>{{ 'Welcome' | addUsername }}</p>
     </div>
   </div>
 </div>
