--- a/src/app/landing/landing/landing.component.scss
+++ b/src/app/landing/landing/landing.component.scss
@@ -82,6 +82,9 @@ h2 {
 
       &-info {
         display: flex;
+        width: 100%;
+        max-width: 350px;
+
         flex-direction: column;
         gap: $gap;
 
